--- a/index.html
+++ b/index.html
@@ -1,1 +1,262 @@
-<h1>Hello this is a test for github pages :) </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CodeSharp - Home</title>
+    <style>
+        /* Additional styles for the homepage */
+        body {
+            font-family: sans-serif;
+            margin: 0;
+            padding: 0;
+            color: white; /* Setting default text color */
+        }
+
+        .sidebar, .navbar, .widgets {
+            display: none; /* Hide sidebar, navbar, and widgets initially */
+        }
+
+        .sidebar {
+            width: 250px;
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            height: 100%;
+            overflow-y: auto;
+        }
+
+        .navbar {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .navbar h1 {
+            margin: 0;
+        }
+
+        .navbar button {
+            background-color: #cee534;
+            padding: 8px 16px;
+            border: none;
+            border-radius: 5px;
+            color: white;
+            cursor: pointer;
+        }
+
+        .widgets {
+            display: flex;
+            justify-content: space-between;
+            gap: 20px;
+            padding: 20px;
+            margin-left: 270px;
+            margin-top: 100px;
+        }
+
+        .widget {
+            width: calc(33.33% - 20px);
+            border: 2px solid #808080;
+            border-radius: 10px;
+            padding: 10px;
+            background-color: transparent;
+            color: black; /* Set text color for widget */
+        }
+
+        .widget img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+            margin-bottom: 10px;
+        }
+
+        .widget h3 {
+            margin: 0;
+            text-align: center;
+        }
+
+        .sidebar-button {
+            background-color: #cee534;
+            border: 2px solid #fff;
+            border-radius: 10px;
+            padding: 10px 20px;
+            margin-bottom: 10px;
+            display: block;
+            text-align: center;
+            color: black; /* Set text color for sidebar buttons */
+            cursor: pointer;
+        }
+
+        .sidebar-button:hover {
+            background-color: yellow;
+            color: black;
+        }
+
+        .sidebar-name {
+            color: white;
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .bottom-text {
+            color: white;
+            text-align: center;
+            margin-bottom: 20px;
+            margin-top: 50px;
+        }
+
+        /* Styles for the login container */
+        .login-container {
+            max-width: 400px;
+            margin: 100px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            color: black; /* Set text color for login page */
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        label {
+            font-weight: bold;
+        }
+
+        input {
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        button {
+            background-color: #4285f4;
+            color: white;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #357ae8;
+        }
+
+        .error-message {
+            color: #e74c3c;
+            margin-top: 10px;
+        }
+
+        /* Hide homepage content initially */
+        .homepage-content {
+            display: none;
+        }
+    </style>
+</head>
+<body>
+    <div class="sidebar">
+        <img src="CodeSharp.png" alt="CodeSharp Logo" width="150" style="display: block; margin: 0 auto; margin-bottom: 20px;">
+        <div class="sidebar-button">
+            <a href="mysharps.html">My Sharps</a>
+        </div>
+        <div class="sidebar-button">
+            <a href="SCS.html">Support Code Sharp</a>
+        </div>
+        <div class="sidebar-button">
+            <a href="#">Soon</a>
+        </div>
+        <div class="sidebar-button">
+            <a href="faq.html">Help</a>
+        </div>
+        <div class="bottom-text">Update 1.0</div>
+        <h3 class="sidebar-name">GoldMic</h3>
+    </div>
+
+    <div class="navbar">
+        <h1>GoldMic.</h1>
+        <h1>CodeSharp</h1>
+        <button onclick="toggleBrightness()">Change Theme</button>
+    </div>
+
+    <!-- Login Container -->
+    <div class="login-container" id="loginContainer">
+        <h2>Login to CodeSharp</h2>
+        <form id="loginForm">
+            <label for="username">Email:</label>
+            <input type="text" id="username" name="username" required>
+
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+
+            <button type="submit">Login</button>
+        </form>
+
+        <div id="errorMessage" class="error-message"></div>
+    </div>
+
+    <!-- Homepage Content -->
+    <div class="homepage-content" id="homepageContent">
+        <div class="widgets">
+            <div class="widget">
+                <img src="image1.jpg" alt="Widget Image 1">
+                <h3>News 1</h3>
+            </div>
+            <div class="widget">
+                <img src="image2.jpg" alt="Widget Image 2">
+                <h3>News 2</h3>
+            </div>
+            <div class="widget">
+                <img src="image3.jpg" alt="Widget Image 3">
+                <h3>News 3</h3>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        function toggleBrightness() {
+            const body = document.querySelector('body');
+            if (body.classList.contains('dark-mode')) {
+                body.classList.remove('dark-mode');
+            } else {
+                body.classList.add('dark-mode');
+            }
+        }
+
+        document.getElementById('loginForm').addEventListener('submit', function (event) {
+            event.preventDefault();
+
+            // Replace the following logic with your actual authentication logic
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+
+            if (username === 'zxcsswer@gmail.com' && password === 'Cupid11223') {
+                // Hide the login container
+                document.getElementById('loginContainer').style.display = 'none';
+
+                // Display the homepage content
+                document.getElementById('homepageContent').style.display = 'block';
+
+                // Display sidebar, navbar, and widgets
+                document.querySelector('.sidebar').style.display = 'block';
+                document.querySelector('.navbar').style.display = 'flex';
+                document.querySelector('.widgets').style.display = 'flex';
+            } else {
+                // Display error message
+                document.getElementById('errorMessage').innerText = 'Wrong email/password';
+            }
+        });
+    </script>
+</body>
+</html>
+
+
